Замер времени выполнения проверки